Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit.
 On branch main
 Your branch is up to date with 'origin/main'.

Changes to be committed:
modified:   bot/__pycache__/main.cpython-311.pyc
modified:   bot/flask/main_flask.py
new file:   bot/flask/static/adaptive.css
new file:   bot/flask/static/container.css
new file:   bot/flask/static/content.css
modified:   bot/flask/static/style.css
modified:   bot/flask/templates/main.html
new file:   bot/flask/templates/rasp.html
modified:   bot/handlers/__pycache__/actions.cpython-311.pyc
modified:   bot/handlers/actions.py
modified:   bot/main.py

--- a/bot/flask/templates/main.html
+++ b/bot/flask/templates/main.html
@@ -11,8 +11,15 @@
 
           gtag('config', 'G-T4KG3BQ088');
         </script>
+        <script src="https://kit.fontawesome.com/c38fe1f00c.js" crossorigin="anonymous"></script>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href='static/style.css'/>
+        
+        <link rel="stylesheet" href='static/container.css'/>
+        <link rel="stylesheet" href='static/adaptive.css'/>
+        <link rel="stylesheet" href='static/content.css'/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@700&display=swap" rel="stylesheet">
         <title>HTML5</title>
         <style>
         </style>
@@ -27,15 +34,21 @@
             <div class="container">
                 <div class="object">
                     <div class="element">
-                        <div class="date">
-                            <div class="time_lesson">16:20 - 17:50</div>
-                            <div class="day_lesson">
-                                <div class="day">16 июнь</div>
-                                <div class="week">Пт</div>
+                        <div class="head_date">
+                            <div class="day">16 июня</div>
+                            <div class="week">Пт</div>
+                        </div>
+                        <div class="main_info">
+                            <div class="lesson_object">
+                                <div class="name_lesson">Основы теории управления</div>
+                                <div class="lesson_item">
+                                    <div class="time_lesson">16:20 - 17:50</div>
+                                    <div class="type_lesson"><i class="fa-solid fa-pen"></i>Экзамен</div>
+                                    <div class="lecturer"><i class="fa-solid fa-user"></i>Рушева Анна Витальевна</div>
+                                    <div class="stream"><i class="fa-solid fa-users"></i>Поток:1422Б1УП1-OUP</div>
+                                    <div class="building-auditorium"><i class="fa-solid fa-house"></i>124 (Корпус № 10)</div>
+                                </div>
                             </div>
-                            
-                            
-                            
 
                         </div>
                         
