--- a/bot/flask/templates/main.html
+++ b/bot/flask/templates/main.html
@@ -33,116 +33,9 @@
         <div class="main-container">
             <div class="container">
                 <div class="object">
-                    <div class="element">
-                        <div class="head_date">
-                            <div class="day">16 июня</div>
-                            <div class="week">Пт</div>
-                        </div>
-                        <div class="main_info">
-                            <div class="lesson_object">
-                                <div class="name_lesson">Основы теории управления</div>
-                                <div class="lesson_item">
-                                    <div class="time_lesson">16:20 - 17:50</div>
-                                    <div class="type_lesson"><i class="fa-solid fa-pen"></i>Экзамен</div>
-                                    <div class="lecturer"><i class="fa-solid fa-user"></i>Рушева Анна Витальевна</div>
-                                    <div class="stream"><i class="fa-solid fa-users"></i>Поток:1422Б1УП1-OUP</div>
-                                    <div class="building-auditorium"><i class="fa-solid fa-house"></i>124 (Корпус № 10)</div>
-                                </div>
-                            </div>
+                    {% block body %}
 
-                        </div>
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-                    </div>
-
-                </div>
-                <div class="object">
-                    <div class="element">
-                        
-
+	                {% endblock %}
                 </div>
             </div>
         </div>
