--- a/bot/flask/templates/main.html
+++ b/bot/flask/templates/main.html
@@ -13,7 +13,7 @@
         </script>
         <script src="https://kit.fontawesome.com/c38fe1f00c.js" crossorigin="anonymous"></script>
         <meta charset="utf-8" />
-        
+        <script src="{{ url_for('static', filename='js/autchscript.js') }}"></script>
         <link rel="stylesheet" href='static/container.css'/>
         <link rel="stylesheet" href='static/adaptive.css'/>
         <link rel="stylesheet" href='static/content.css'/>
@@ -28,6 +28,14 @@
         <header>
             <div class="header">
                 <img src="static/images/logo2.png" class="logo">
+                
+                <div class="zach_header">
+                    <button>Зачетка</button>
+                </div>
+                <div class="life_header">
+                    <button>Новости</button>
+                </div>
+                
             </div>
         </header>
         <div class="main-container">
