--- a/bot/flask/templates/main.html
+++ b/bot/flask/templates/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <!-- Google tag (gtag.js) -->
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-T4KG3BQ088"></script>
@@ -13,10 +14,11 @@
         </script>
         <script src="https://kit.fontawesome.com/c38fe1f00c.js" crossorigin="anonymous"></script>
         <meta charset="utf-8" />
-        <script src="{{ url_for('static', filename='js/autchscript.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/test.js') }}"></script>
         <link rel="stylesheet" href='static/container.css'/>
         <link rel="stylesheet" href='static/adaptive.css'/>
         <link rel="stylesheet" href='static/content.css'/>
+        <link rel="stylesheet" href='static/zach_content.css'/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@700&display=swap" rel="stylesheet">
@@ -30,7 +32,8 @@
                 <img src="static/images/logo2.png" class="logo">
                 
                 <div class="zach_header">
-                    <button>Зачетка</button>
+                    <button class='button_zach' onclick="myFunction()">Зачетка</button>
+                    
                 </div>
                 <div class="life_header">
                     <button>Новости</button>
@@ -38,6 +41,11 @@
                 
             </div>
         </header>
+        <div class="zach_content" id="open_zach">
+            
+            <p>Кнопка в разработке</p>
+            
+        </div>
         <div class="main-container">
             <div class="container">
                 <div class="object">
