modified:   bot/flask/static/js/test.js modified:   bot/flask/static/zach_content.css modified:   bot/flask/templates/main.html modified:   bot/handlers/__pycache__/actions.cpython-311.pyc modified:   bot/parser/__pycache__/parser.cpython-311.pyc modified:   bot/test.py

--- a/bot/flask/static/zach_content.css
+++ b/bot/flask/static/zach_content.css
@@ -39,3 +39,8 @@
     0% {top: 90px;}
     90% {transform: translateY(-150%);}
 }   
+
+
+#button_color.show_color {
+    background-color: rgb(123 151 179);
+}
