--- a/bot/flask/templates/main.html
+++ b/bot/flask/templates/main.html
@@ -31,7 +31,7 @@
             <div class="header">
                 <img src="static/images/logo2.png" class="logo">
                 
-                <div class="zach_header">
+                <div id='button_color' class="zach_header">
                     <button class='button_zach' onclick="myFunction()">Зачетка</button>
                     
                 </div>
