new file:   bot/config/__init__.py new file:   bot/config/__pycache__/__init__.cpython-311.pyc new file:   bot/flask_/__init__.py new file:   bot/flask_/__pycache__/__init__.cpython-311.pyc new file:   bot/flask_/__pycache__/main_flask.cpython-311.pyc renamed:    bot/flask/main_flask.py -> bot/flask_/main_flask.py renamed:    bot/flask/static/adaptive.css -> bot/flask_/static/adaptive.css renamed:    bot/flask/static/container.css -> bot/flask_/static/container.css renamed:    bot/flask/static/content.css -> bot/flask_/static/content.css renamed:    bot/flask/static/images/logo.png -> bot/flask_/static/images/logo.png renamed:    bot/flask/static/images/logo2.png -> bot/flask_/static/images/logo2.png renamed:    bot/flask/static/js/test.js -> bot/flask_/static/js/test.js renamed:    bot/flask/static/registration.css -> bot/flask_/static/registration.css renamed:    bot/flask/static/style.css -> bot/flask_/static/style.css renamed:    bot/flask/static/zach_content.css -> bot/flask_/static/zach_content.css renamed:    bot/flask/templates/main.html -> bot/flask_/templates/main.html renamed:    bot/flask/templates/rasp.html -> bot/flask_/templates/rasp.html renamed:    bot/flask/templates/reg.html -> bot/flask_/templates/reg.html new file:   bot/handlers/__init__.py new file:   bot/handlers/__pycache__/__init__.cpython-311.pyc modified:   bot/handlers/__pycache__/actions.cpython-311.pyc modified:   bot/handlers/actions.py modified:   bot/main.py new file:   bot/parser/__init__.py new file:   bot/parser/__pycache__/__init__.cpython-311.pyc modified:   bot/parser/__pycache__/parser.cpython-311.pyc modified:   bot/parser/parser.py deleted:    bot/test.py
modified:   bot/flask_/main_flask.py

--- a/bot/flask_/templates/rasp.html
+++ b/bot/flask_/templates/rasp.html
@@ -6,7 +6,7 @@
             <div class="day">{{i}}</div>
             <!-- <div class="week">{{week}}</div> -->
         </div>
-        {% for k in range(rasp[i]['power_lesson']) %}
+        {% for k in range(rasp[i]['power_lesson'][0]) %}
         <div class="main_info">
             <div class="lesson_object">
                 <div class="name_lesson">{{rasp[i]['name_lesson'][k]}}</div>
